--- a/test/MDK-ARM_HAL_UART_NUCLEO-F030R8/MDK-ARM/MDK-ARM_HAL_UART_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_HAL_UART_NUCLEO-F030R8/MDK-ARM/MDK-ARM_HAL_UART_NUCLEO-F030R8.uvprojx
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -src .. -src  ../../../srcTrice.C -list ../../til.json -v</UserProg1Name>
+            <UserProg1Name>trice u -src .. -src  ../../../srcTrice.C -i ../../til.json -v</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -352,7 +352,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <ClangAsOpt>13</ClangAsOpt>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
